multienvapp/base/back-golang/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-golang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-golang
  template:
    metadata:
      labels:
        app: back-golang
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-back-golang:latest
        imagePullPolicy: Always
        name: back-golang
        ports:
          - containerPort: 8442
            protocol: TCP
        resources: {}
