multienvapp/base/back-golang/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-golang
spec:
  ports:
    - name: http-8442
      port: 8442
      protocol: 
      targetPort: 8442   
  selector:
    app: back-golang
