multienvapp/base/back-golang/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: back-golang
spec:
  to:
    kind: Service
    name: back-golang
  port:
    targetPort: http-8442
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
